--- a/Balanced_vehicle_F103RE.ioc
+++ b/Balanced_vehicle_F103RE.ioc
@@ -22,8 +22,8 @@ Dma.SPI1_TX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAl
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,configTOTAL_HEAP_SIZE,FootprintOK,Queues01,Mutexes01
 FREERTOS.Mutexes01=lvgl_mutex,Dynamic,NULL
-FREERTOS.Queues01=pitch_queue,1,float,0,Dynamic,NULL,NULL
-FREERTOS.Tasks01=defaultTask,10,600,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;myTask02,48,500,Upright_ring_Task,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.Queues01=pitch_queue,1,float,0,Dynamic,NULL,NULL;speed_queue,1,float,0,Dynamic,NULL,NULL
+FREERTOS.Tasks01=defaultTask,10,600,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;myTask02,48,500,Upright_ring_Task,Default,NULL,Dynamic,NULL,NULL;myTask03,49,500,Speed_loop_Task,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configTOTAL_HEAP_SIZE=10000
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
