--- a/Balanced_vehicle_F103RE.ioc
+++ b/Balanced_vehicle_F103RE.ioc
@@ -3,7 +3,7 @@ ADC1.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_15
 ADC1.IPParameters=Rank-1\#ChannelRegularConversion,master,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,NbrOfConversionFlag
 ADC1.NbrOfConversionFlag=1
 ADC1.Rank-1\#ChannelRegularConversion=1
-ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
+ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_41CYCLES_5
 ADC1.master=1
 CAD.formats=
 CAD.pinconfig=
@@ -23,7 +23,7 @@ FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,configTOTAL_HEAP_SIZE,FootprintOK,Queues01,Mutexes01
 FREERTOS.Mutexes01=lvgl_mutex,Dynamic,NULL
 FREERTOS.Queues01=pitch_queue,1,float,0,Dynamic,NULL,NULL;speed_loop_OUT_queue,1,float,0,Dynamic,NULL,NULL;Motor_isEnable_queue,1,uint8_t,0,Dynamic,NULL,NULL;Speed_difference_OUT_queue,1,int16_t,0,Dynamic,NULL,NULL;target_speed_Queue,1,float,0,Dynamic,NULL,NULL;target_speed_difference_Queue,1,int32_t,0,Dynamic,NULL,NULL
-FREERTOS.Tasks01=defaultTask,10,600,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;myTask02,48,500,Upright_ring_Task,Default,NULL,Dynamic,NULL,NULL;myTask03,49,500,Speed_loop_Task,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.Tasks01=defaultTask,10,600,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;myTask02,48,500,Upright_ring_Task,Default,NULL,Dynamic,NULL,NULL;myTask03,49,500,Speed_loop_Task,Default,NULL,Dynamic,NULL,NULL;TSL1401Screen,10,256,TSL1401Screen_Task,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configTOTAL_HEAP_SIZE=10000
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
@@ -95,6 +95,7 @@ Mcu.UserConstants=
 Mcu.UserName=STM32F103RETx
 MxCube.Version=6.8.1
 MxDb.Version=DB.6.0.81
+NVIC.ADC1_2_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.DMA1_Channel3_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
